--- a/web/CASTNXT/Gemfile
+++ b/web/CASTNXT/Gemfile
@@ -68,3 +68,7 @@ end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
+
+#gem 'google-api-client', '~> 0.9', require: 'google/apis/gmail_v1'
+
+gem 'sendinblue'
