--- a/web/CASTNXT/package.json
+++ b/web/CASTNXT/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.26.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "^5.1.3",
+    "heroku": "^7.65.0",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
